--- a/source/stylesheets/_masthead.scss
+++ b/source/stylesheets/_masthead.scss
@@ -2,8 +2,9 @@
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url('../img/header.jpg');
-  background-position: center center;
+  // background-image: url('../img/header.jpg');
+  // background-position: center center;
+  background-color: $gray-100;
   @include background-cover;
   hr {
     margin-top: 30px;
