--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -7,6 +7,7 @@ html {
 
 body {
   @include serif-font;
+  color: $gray-900;
 }
 
 hr {
@@ -34,6 +35,7 @@ h4,
 h5,
 h6 {
   @include sans-serif-font;
+  color: $gray-700 !important;
 }
 
 .bg-primary {
@@ -45,7 +47,7 @@ h6 {
 }
 
 .text-faded {
-  color: fade-out($white, .3);
+  color: fade-out($gray-700, .3);
 }
 
 section {
