--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -4,8 +4,7 @@
 @import "global.scss";
 @import "navbar.scss";
 @import "masthead.scss";
-@import "services.scss";
-@import "portfolio.scss";
+@import "about.scss";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "github-highlighter";
