--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <%= image_tag 'logo+name-blue.png', alt: 'Magmo' %>
+            <%= image_tag 'logo+name-red.png', alt: 'Magmo' %>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,9 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./force-move-games.pdf">Paper</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -83,12 +86,10 @@
             </p>
 
             <p class="text-faded mb-4">
-              Our first project is the <a href="https://github.com/magmo/force-move-games">
-              force-move games</a> framework - a small state channel framework capable of
+              Our first project is the force-move games framework - a small state channel framework capable of
               running 3rd-party 'applications' that conform to a simple state-machine interface.
-              We will be publishing a white paper containing a full description of the
-              framework and its capabilities in the coming weeks. In the meantime, 
-              <a href="https://github.com/magmo/force-move-games">check out the code!</a>.
+              For more details read the <a href="./force-move-games.pdf">paper</a> or
+              check out the <a href="https://github.com/magmo/force-move-games">code</a>!
             </p>
           </div>
         </div>
@@ -108,12 +109,22 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6 mr-auto text-center">
+          <div class="col-lg-3 mr-auto text-center">
             <a href="https://github.com/magmo">
               <i class="fab fa-github fa-6x"></i>
             </a>
           </div>
-          <div class="col-lg-6 mr-auto text-center">
+          <div class="col-lg-3 mr-auto text-center">
+            <a href="https://medium.com/magmo">
+              <i class="fab fa-medium fa-6x"></i>
+            </a>
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <a href="https://twitter.com/magmoHQ">
+              <i class="fab fa-twitter fa-6x"></i>
+            </a>
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
             <a href="mailto:research@magmo.com">
               <i class="far fa-envelope fa-6x"></i>
             </a>
