--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -81,7 +81,7 @@
             <h2 class="section-heading">Wait, what?</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">
-              We are a small team of researchers working on a state channels - a scaling 
+              We are a small team of researchers working on state channels - a scaling 
               solution for the ethereum blockchain.
             </p>
 
