--- a/source/devcon.html.erb
+++ b/source/devcon.html.erb
@@ -30,7 +30,7 @@
 
   <body id="page-top">
 
-    <h1>You scanned on our QR code!<h1>
+    <h1>You scanned our QR code!<h1>
 
     <p>We'll put up some actual content soon ...</p>
 
