copied text from our flyer, added a link to the rps app and github repo

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -81,16 +81,27 @@
             <h2 class="section-heading">Wait, what?</h2>
             <hr class="light my-4">
             <p class="text-faded mb-4">
-              We are a small team of researchers working on state channels - a scaling 
+              We are a team of researchers working on state channels - the most promising scaling 
               solution for the ethereum blockchain.
+            </p>
+            <p class="text faded mb-4">
+            The technology exists today to allow a whole class of applications to move the majority of their transactions “off chain”. The complexity of understanding and applying state channel techniques is the main barrier to adoption.
+            At Magmo, we’re working to make state channels more accessible to the Ethereum developer community.
+            We are fortunate to be supported in this effort by the Ethereum Foundation and the Ethereum Community Fund.
             </p>
 
             <p class="text-faded mb-4">
-              Our first project is the force-move games framework - a small state channel framework capable of
-              running 3rd-party 'applications' that conform to a simple state-machine interface.
-              For more details read the <a href="./force-move-games.pdf">paper</a> or
-              check out the <a href="https://github.com/magmo/force-move-games">code</a>!
+            Our focus on simplicity and usability led us to develop ForceMove - a simple but powerful state channel framework, suitable for general use. 
+            For more details read the <a href="./force-move-games.pdf">paper</a> or
+            check out the <a href="https://github.com/magmo/force-move-games">code</a>!
             </p>
+
+            <p class="text-faded mb-4">
+             Our recently launched <a href="https://demo.magmo.com">Rock-Paper-Scissors game</a> is the first ForceMove application. The application is fully <a href="https://github.com/magmo/rps-poc">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
+            </p>
+
+
+
           </div>
         </div>
       </div>
