--- a/source/stylesheets/_navbar.scss
+++ b/source/stylesheets/_navbar.scss
@@ -52,7 +52,7 @@
     .navbar-nav > li.nav-item > a.nav-link:focus {
       color: fade-out($gray-900, .3);
       &:hover {
-        color: $white;
+        color: darken($primary, .1);
       }
     }
     &.navbar-shrink {
