link to app in navbar

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,6 +48,9 @@
               <a class="nav-link" href="./force-move-games.pdf">Paper</a>
             </li>
             <li class="nav-item">
+            <a class="nav-link" href="https://demo.magmo.com">RPS</a>
+          </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
