--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <%= image_tag 'logo+name-orange.svg', alt: 'Magmo' %>
+            <%= image_tag 'logo+name-orange.svg', height:'45', alt: 'Magmo' %>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
