outlined logo to prevent incorrect font

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -65,7 +65,7 @@
             <h1 class="text-uppercase">
               <strong>We build state channels</strong>
             </h1>
-            <hr>
+            <br>
           </div>
           <div class="col-lg-8 mx-auto">
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
@@ -78,8 +78,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Wait, what?</h2>
-            <hr class="light my-4">
+            <h2 class="section-heading" align="left">Wait, what?</h2>
+            <!--<hr class="light my-4">-->
+            <br>
             <p class="text-faded mb-4" align="left">
               We are a team of researchers working on state channels - the most promising scaling 
               solution for the ethereum blockchain.
@@ -106,6 +107,22 @@
         </div>
       </div>
     </section>
+
+    <section class="bg-dark" id="team">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="section-heading" align="left">The team</h2>
+          <!--<hr class="my-4">-->
+          <br>
+          <p class="text-faded mb-4" align="left">
+            Team section.
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </section>
 
     <section id="contact">
       <div class="container">
