--- a/source/stylesheets/_masthead.scss
+++ b/source/stylesheets/_masthead.scss
@@ -6,8 +6,9 @@ header.masthead {
   /* background-image: url('../images/header.png'); */
   background-image: url('../images/bg.svg');
   background-repeat: no-repeat;
-  // background-position: center center;
+  background-position: left bottom;
   background-color: $gray-100;
+  background-size: contain;
   // @include background-cover;
   hr {
     margin-top: 30px;
