add some emphasis to most important sentence

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading" align="left">Wait, what?</h2>
+            <h2 class="section-heading" align="left">About us</h2>
             <!--<hr class="light my-4">-->
             <br>
             <p class="text-faded mb-4" align="left">
@@ -87,7 +87,11 @@
             </p>
             <p class="text faded mb-4" align="left">
             The technology exists today to allow a whole class of applications to move the majority of their transactions “off chain”. The complexity of understanding and applying state channel techniques is the main barrier to adoption.
-            At Magmo, we’re working to make state channels more accessible to the Ethereum developer community.
+            </p>
+            <p class="text faded mb-4" align="left">
+            <b>At Magmo, we’re working to make state channels more accessible to the Ethereum developer community.</b>
+            </p>
+            <p class="text faded mb-4" align="left">
             We are fortunate to be supported in this effort by the Ethereum Foundation and the Ethereum Community Fund.
             </p>
 
