add links to TTT and update white paper

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,8 +48,11 @@
               <a class="nav-link" href="./force-move-games.pdf">Paper</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="https://demo.magmo.com">RPS</a>
+            <a class="nav-link" href="https://rps.magmo.com">RPS</a>
           </li>
+          <li class="nav-item">
+          <a class="nav-link" href="https://ttt.magmo.com">TTT</a>
+        </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -102,7 +105,7 @@
             </p>
 
             <p class="text-faded mb-4" align="left">
-            Our recently launched <a href="https://demo.magmo.com">Rock-Paper-Scissors game</a> is the first ForceMove application. The application is fully <a href="https://github.com/magmo/rps-poc">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
+            We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock-Paper-Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a> is the first ForceMove application. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
             </p>
 
 
