[Optional] add our twitter feed

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -105,11 +105,14 @@
             </p>
 
             <p class="text-faded mb-4" align="left">
-            We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock-Paper-Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a> is the first ForceMove application. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
+            We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a> is the first ForceMove application. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
             </p>
 
 
 
+          </div>
+          <div class="col-lg-4 mx-auto" style="text-align:center;">
+          <a class="twitter-timeline" data-width="220" data-height="500" href="https://twitter.com/magmoHQ?ref_src=twsrc%5Etfw">Tweets by magmoHQ</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
         </div>
       </div>
