--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -105,7 +105,7 @@
             </p>
 
             <p class="text-faded mb-4" align="left">
-            We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a> is the first ForceMove application. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
+            We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a>. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
             </p>
 
 
