--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <link type="text/plain" rel="author" href="/humans.txt" />
-    <link rel="apple-touch-icon" href="icon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
-    <title><%= current_page.data.title || "My Blog" %></title>
+    <title>magmo</title>
 
     <%= stylesheet_link_tag "application" %>
     <%= yield_content :stylesheets %>
@@ -25,17 +26,42 @@
 
     <%= yield_content :head %>
   </head>
-  <body>
-    <div class="container">
-      <!-- Logo & Top Nav -->
-      <div class="row">
-        <div class="col-3">
-          <h1><%= link_to image_tag('http://placehold.it/250x75&text=My+Blog'), '/' %></h1>
+  <body id="page-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <%= image_tag 'logo+name-orange.svg', height:'45', alt: 'Magmo' %>
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./force-move-games.pdf">Paper</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://rps.magmo.com">RPS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://ttt.magmo.com">TTT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="https://discord.gg/UDQMgVa">Chat</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="./blog">Blog</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-9">
-          <ul></ul>
-        </div>
-      </div>
+    </nav>
       <!-- End Header and Nav -->
 
       <!-- Main page container -->
@@ -44,10 +70,7 @@
       <!-- Footer -->
       <footer class="row">
         <div class="col-sm-12 col-lg-6">
-          <p>&copy; Copyright <%= Date.today.year.to_s %> My Blog</p>
-        </div>
-        <div class="col-sm-12 col-lg-6">
-          <p class="right">Built with <i class="fa fa-heart"></i> by <%= link_to 'Matt Olson', 'http://mattolson.com' %></p>
+          <p>&copy; Copyright <%= Date.today.year.to_s %> magmo</p>
         </div>
       </footer>
 
