simple mermaid diagram working

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -5,8 +5,12 @@
 @import "navbar.scss";
 @import "masthead.scss";
 @import "about.scss";
+@import "blog.scss";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "github-highlighter";
 
 @import "bootstrap-overrides.scss";
+
+@import "mermaid";
+
