--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,26 +1,32 @@
----
-pageable: true
-per_page: 10
----
-<div class="container">
-  <% if paginate && num_pages > 1 %>
-    <p>Page <%= page_number %> of <%= num_pages %></p>
+<section id="blog"">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 mx-auto">
 
-    <% if prev_page %>
-      <p><%= link_to 'Previous page', prev_page %></p>
-    <% end %>
-  <% end %>
+        <% if paginate && num_pages > 1 %>
+        <p>Page <%= page_number %> of <%= num_pages %></p>
 
-  <% page_articles.each_with_index do |article, i| %>
-    <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
-    <!-- use article.summary(250) if you have Nokogiri available to show just
-        the first 250 characters -->
-    <%= article.body %>
-  <% end %>
+        <% if prev_page %>
+          <p><%= link_to 'Previous page', prev_page %></p>
+        <% end %>
+      <% end %>
 
-  <% if paginate %>
-    <% if next_page %>
-      <p><%= link_to 'Next page', next_page %></p>
-    <% end %>
-  <% end %>
-</div>
+      <% page_articles.each_with_index do |article, i| %>
+        <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+        <!-- use article.summary(250) if you have Nokogiri available to show just
+            the first 250 characters -->
+        <%= article.summary(250) %>
+      <% end %>
+
+      <% if paginate %>
+        <% if next_page %>
+          <p><%= link_to 'Next page', next_page %></p>
+        <% end %>
+      <% end %>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+
