--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
+
     <title>magmo</title>
 
     <%= stylesheet_link_tag "application" %>
@@ -30,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" href="/">
             <%= image_tag 'logo+name-orange.svg', height:'45', alt: 'Magmo' %>
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +40,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="/#about">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./force-move-games.pdf">Paper</a>
@@ -57,7 +58,7 @@
             <a class="nav-link" href="https://discord.gg/UDQMgVa">Chat</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./blog">Blog</a>
+            <a class="nav-link" href="/blog">Blog</a>
             </li>
           </ul>
         </div>
@@ -66,13 +67,6 @@
 
       <!-- Main page container -->
       <%= yield %>
-
-      <!-- Footer -->
-      <footer class="row">
-        <div class="col-sm-12 col-lg-6">
-          <p>&copy; Copyright <%= Date.today.year.to_s %> magmo</p>
-        </div>
-      </footer>
 
       <!--[if lt IE 10]>
       <div id="ie-warning-overlay">
@@ -116,7 +110,7 @@
     </div>
 
     <!-- Javascript -->
-    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/0.3.0/mermaid.full.min.js"></script>
     <%= javascript_include_tag 'modernizr-3.5.0.min' %>
     <%= javascript_include_tag 'application' %>
     <%= yield_content :javascripts %>
