--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -79,7 +79,7 @@
       </div>
       <div class="col mr-auto text-center">
         <a href="mailto:research@magmo.com">
-          <i class="far fa-envelope fa-6x"></i>
+          <i class="fab fa-envelope fa-6x"></i>
         </a>
       </div>
       <div class="col mr-auto text-center">
