--- a/source/index2.html.erb
+++ b/source/index2.html.erb
@@ -1,3 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="cleartype" content="on" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+    <title>magmo</title>
+
+    <%= stylesheet_link_tag "application" %>
+    <%= yield_content :stylesheets %>
+
+    <% if content_for? :styles %>
+      <style type="text/css">
+        <%= yield_content :styles %>
+      </style>
+    <% end %>
+
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+    <%= yield_content :head %>
+  </head>
+  
+  <body id="page-top">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="/">
+            <%= image_tag 'logo+name-orange.svg', height:'45', alt: 'Magmo' %>
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./force-move-games.pdf">Paper</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://rps.magmo.com">RPS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://ttt.magmo.com">TTT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="https://discord.gg/UDQMgVa">Chat</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
 <header class="masthead text-center d-flex">
   <div class="container my-auto">
     <div class="row">
@@ -88,4 +154,15 @@
       </a>
     </div>
   </div>
+</div>
 </section>
+
+  <!-- Javascript -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/0.3.0/mermaid.full.min.js"></script>
+  <%= javascript_include_tag 'modernizr-3.5.0.min' %>
+  <%= javascript_include_tag 'application' %>
+  <%= yield_content :javascripts %>
+  <%= google_analytics_tag %>
+</body>
+</html>
