--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import "mixins.scss";
 @import "global.scss";
 @import "navbar.scss";
+@import "sidenav.scss";
 @import "masthead.scss";
 @import "about.scss";
 @import "blog.scss";
