resize social nav, move about information to main section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,20 +1,7 @@
 <header class="masthead text-center d-flex">
-  <div class="container my-auto">
-    <div class="row">
-      <div class="col-lg-10 mx-auto">
-        <h1 class="text-uppercase">
-          <strong>We build state channels</strong>
-        </h1>
-        <br>
-      </div>
-      <div class="col-lg-8 mx-auto">
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
-      </div>
-    </div>
-  </div>
-</header>
 
-<section class="bg-primary" id="about">
+<section>
+<div class="col-lg-10 mx-auto">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto text-center">
@@ -47,45 +34,6 @@
       </div>
     </div>
   </div>
-</section>
-
-<section id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <h2 class="section-heading">Let's Get In Touch!</h2>
-        <hr class="my-4">
-        <p class="mb-5">
-          If you want to find out more about what we're doing or are interested in
-          getting involved, please let us know!
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col mr-auto text-center">
-        <a href="https://github.com/magmo">
-          <i class="fab fa-github fa-6x"></i>
-        </a>
-      </div>
-      <div class="col mr-auto text-center">
-        <a href="https://medium.com/magmo">
-          <i class="fab fa-medium fa-6x"></i>
-        </a>
-      </div>
-      <div class="col mr-auto text-center">
-        <a href="https://twitter.com/magmoHQ">
-          <i class="fab fa-twitter fa-6x"></i>
-        </a>
-      </div>
-      <div class="col mr-auto text-center">
-        <a href="mailto:research@magmo.com">
-          <i class="fab fa-envelope fa-6x"></i>
-        </a>
-      </div>
-      <div class="col mr-auto text-center">
-      <a href="https://discord.gg/UDQMgVa">
-        <i class="fab fa-discord fa-6x"></i>
-      </a>
-    </div>
   </div>
 </section>
+</header>
