--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -70,17 +70,27 @@
       <ul>
         <li class="twitter">
           <a href="https://twitter.com/magmoHQ">
-          <i class="fab fa-twitter fa-6x"></i>
+          <i class="fab fa-twitter fa-4x"></i>
           </a>
         </li>
         <li class="discord">
           <a href="https://discord.gg/UDQMgVa">
-          <i class="fab fa-discord fa-6x"></i>
+          <i class="fab fa-discord fa-4x"></i>
           </a>
         </li>
         <li class="github">
           <a href="https://github.com/magmo">
-          <i class="fab fa-github fa-6x"></i>
+          <i class="fab fa-github fa-4x"></i>
+          </a>
+        </li>
+        <li class="medium">
+          <a href="https://medium.com/magmo">
+          <i class="fab fa-medium fa-4x"></i>
+          </a>
+        </li>
+        <li class="email">
+          <a href="mailto:research@magmo.com">
+          <i class="fab fa-envelope fa-4x"></i>
           </a>
         </li>
       </ul>
