--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,39 +1,12 @@
-<header class="masthead text-center d-flex">
-
-<section>
+<!-- HOME -->
+<section id="home">
 <div class="col-lg-10 mx-auto">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto text-center">
-        <h2 class="section-heading" align="left">About us</h2>
-        <!--<hr class="light my-4">-->
-        <br>
-        <p class="text-faded mb-4" align="left">
-          We are a team of researchers working on state channels - the most promising scaling 
-          solution for the ethereum blockchain.
-        </p>
-        <p class="text faded mb-4" align="left">
-        The technology exists today to allow a whole class of applications to move the majority of their transactions “off chain”. The complexity of understanding and applying state channel techniques is the main barrier to adoption.
-        </p>
-        <p class="text faded mb-4" align="left">
-        <b>At Magmo, we’re working to make state channels more accessible to the Ethereum developer community.</b>
-        </p>
-        <p class="text faded mb-4" align="left">
-        We are fortunate to be supported in this effort by the Ethereum Foundation and the Ethereum Community Fund.
-        </p>
-
-        <p class="text-faded mb-4" align="left">
-        Our focus on simplicity and usability led us to develop ForceMove - a simple but powerful state channel framework, suitable for general use. 
-        For more details read the <a href="./force-move-games.pdf">paper</a> or
-        check out the <a href="https://github.com/magmo/force-move-games">code</a>!
-        </p>
-
-        <p class="text-faded mb-4" align="left">
-        We have recently launched two games that operate on ForceMove: <a href="https://rps.magmo.com">Rock Paper Scissors</a> and  <a href="https://ttt.magmo.com">Tic Tac Toe</a>. The applications are fully <a href="https://github.com/magmo/apps">open-source</a> and designed to be used as a starting point for developers wanting to integrate state channels into their products.
-        </p>
+        <h2 align="left">State Channels, Simplified.</h2>
       </div>
     </div>
   </div>
   </div>
 </section>
-</header>
