--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -1,8 +1,20 @@
 // Global styling for this template
+
+  body {
+  background-image: linear-gradient( rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.15) ), url('../images/bg.svg');
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-color: $gray-100;
+  background-size: cover;
+  background-attachment: fixed;
+
+  }
+
 body,
 html {
   width: 100%;
   height: 100%;
+  text-align: left;
 }
 
 body {
