--- a/source/stylesheets/_sidenav.scss
+++ b/source/stylesheets/_sidenav.scss
@@ -1,4 +1,3 @@
-/*SOCIAL NAVIGATION*/
 .social_navigation{
     position:fixed;
     display:flex;
@@ -6,15 +5,10 @@
     bottom:0;
     right:30px;
     margin:auto 0;
-    z-index:10;
+    z-index:2;
     pointer-events:none;
-    mix-blend-mode:difference;
+    color: $primary;
 }
-
-// .social_navigation.delete,
-// .social_navigation.black{
-//     mix-blend-mode:normal;
-// }
 
 .social_navigation ul{
     display:flex; 
@@ -34,69 +28,12 @@
     margin:0;
 }
 
-.social_navigation ul li:first-child::before,
-.social_navigation ul li:last-child::before{
-    width:1px;
-    height:20px; 
-    position:absolute; 
-    left:-1px; 
-    right:0; 
-    margin:0 auto; 
-    background:#FFFFFF; 
-    content:'';
-}
-
-.social_navigation.black ul li:first-child::before,
-.social_navigation.black ul li:last-child::before{
-    background:#000;
-}
-
 .social_navigation ul li:first-child::before{
     top:-40px;
 }
 .social_navigation ul li:last-child::before{
     bottom:-40px;
 }
-
-// .social_navigation ul li a{
-//     width:26px; 
-//     height:26px; 
-//     background:url(../../img/sp_social_icons.svg) 
-//     no-repeat; 
-//     display:block; 
-//     position:relative; 
-//     font-size:0; 
-//     will-change:opacity; 
-//     transition:opacity 0.35s ease-out; 
-//     -webkit-transition:opacity 0.35s ease-out;
-// }
-
-// .social_navigation ul li.twitter a{
-//     background-position:5px 12px;
-// }
-// .social_navigation ul li.discord a{
-//     background-position:5px -32px;
-// }
-// .social_navigation ul li.github a{
-//     background-position:5px -74px;
-// }
-// .social_navigation ul li.telegram a{
-//     background-position:5px -116px;
-// }
-
-// .social_navigation.black ul li.twitter a{
-//     background-position:5px -146px;
-// }
-// .social_navigation.black ul li.discord a{
-//     background-position:5px -190px;
-// }
-// .social_navigation.black ul li.github a{
-//     background-position:5px -234px;
-// }
-// .social_navigation.black ul li.telegram a{
-//     background-position:5px -274px;
-// }
-
 .social_navigation ul li a:hover{
     opacity:0.6;
 }
