--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import "masthead.scss";
 @import "about.scss";
 @import "blog.scss";
+@import "home.scss";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "github-highlighter";
