making about,team,research, apps look pretty

--- a/source/apps.html.erb
+++ b/source/apps.html.erb
@@ -2,18 +2,18 @@
 <section id="apps">
 <div class="col-lg-10 mx-auto">
   <div class="container">
-    <div class="row">
+    <div class="row d-flex flex-wrap align-items-center">
         <div class="col-sm" align="right">
         </div>
         <div class="col-sm" align="right">
         </div>
         <div class="col-sm" align="right">
-        <a href="">
-        <img src="/images/rpsfavicon.png" height="200px">
+        <a href="https://rps.magmo.com">
+        <img src="/images/rpsfavicon.png" height="200px" class="hexagon-tile">
         </a>
         </div>
       <div class="col-sm-6">
-        <h2 class="section-heading" align="left">Rock Paper Scissors</h2>
+        <h2 class="section-heading" align="left"><a href="https://rps.magmo.com">Rock Paper Scissors</a></h2>
         <p>
         Choose your weapon!
         </p>
@@ -21,18 +21,18 @@
     </div>
     <br>
     <br>
-    <div class="row">
+    <div class="row d-flex flex-wrap align-items-center">
         <div class="col-sm" align="right">
         </div>
         <div class="col-sm" align="right">
         </div>
         <div class="col-sm" align="right">
-        <a href="">
-        <img src="/images/tttfavicon.png" height="200px">
+        <a href="https://ttt.magmo.com">
+        <img src="/images/tttfavicon.png" height="200px" class="hexagon-tile">
         </a>
         </div>
         <div class="col-sm-6">
-        <h2 class="section-heading" align="left">Tic Tac Toe</h2>
+        <h2 class="section-heading" align="left"><a href="https://ttt.magmo.com">Tic Tac Toe</a></h2>
         <p>
         Get three in a row!
         </p>
