--- a/source/blog/_article_sidebar.html.erb
+++ b/source/blog/_article_sidebar.html.erb
@@ -1,10 +1,10 @@
 <aside class="col-sm-12 col-lg-3">
   <ul class="credit">
-    <li class="time">Posted on <time datetime="<%= article.date.strftime('%Y-%m-%d') %>"><%= article.date.strftime('%A %b %e, %Y') %></time></li>
+    <span class="time">Posted on <time datetime="<%= article.date.strftime('%Y-%m-%d') %>"><%= article.date.strftime('%A %b %e, %Y') %></time></span>
   </ul>
   <ul class="tags">
     <% article.tags.each do |tag| %>
-      <li><%= link_to tag, tag_path(tag), class: 'badge badge-secondary' %></li>
+    <%= link_to tag, tag_path(tag), class: 'badge badge-secondary' %></li>
     <% end %>
   </ul>
 </aside>
