--- a/source/research.html.erb
+++ b/source/research.html.erb
@@ -3,27 +3,28 @@
 <div class="col-lg-10 mx-auto">
   <div class="container">
     <div class="row">
+
         <div class="col-sm" align="right">
-        </div>
-        <div class="col-sm" align="right">
-        <a href="">
+        <a href="/force-move-games-OLD.pdf">
         <i class="far fa-file-pdf fa-3x"></i>
         <br>
         </a>
-        v1
+        Jun 2018
         </div>
         <div class="col-sm" align="right">
-        <a href="">
+        <a href="/force-move-games.pdf">
         <i class="far fa-file-pdf fa-5x"></i>
         <br>
         </a>
-        v2
+        Nov 2018
         </div>
-      <div class="col-sm-6">
+        <div class="col-sm-6">
         <h2 class="section-heading" align="left">ForceMove protocol</h2>
-        <p>
+        <p class="text-faded">
         An n-party state channel protocol, using a round-robin (turn based) approach to avoid most state channel dispute types.
         </p>
+        </div>
+        <div class="col-sm" align="right">
         </div>
     </div>
     <br>
@@ -32,19 +33,19 @@
         <div class="col-sm" align="right">
         </div>
         <div class="col-sm" align="right">
-        </div>
-        <div class="col-sm" align="right">
-        <a href="">
+        <a href="/nitro.pdf">
         <i class="far fa-file-pdf fa-5x"></i>
         <br>
         </a>
-        v1
+        Feb 2019
         </div>
         <div class="col-sm-6">
         <h2 class="section-heading" align="left">Nitro protocol</h2>
-        <p>
+        <p class="text-faded">
         State channel network protocol. An approach to ledger channels (which can allocate to another channel, not just a participant) and virtual channels (where participants without a shared blockchain deposit can open channels through intermediaries). Supports multiple applications, top-ups and partial withdrawals supported by a single deposit. Channels update independently, making it easier to reason about whether it is safe to update them, and to compute the total value locked up in a state channel network. 
         </p>
+        </div>
+        <div class="col-sm" align="right">
         </div>
     </div>
   </div>
