--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -6,6 +6,7 @@
 @import "sidenav.scss";
 @import "masthead.scss";
 @import "about.scss";
+@import "apps.scss";
 @import "blog.scss";
 @import "home.scss";
 @import "font-awesome-sprockets";
