--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 mx-auto text-center">
-        <h2 align="left">State Channels, Simplified.</h2>
+        <h2 align="left">State channels, Simplified.</h2>
       </div>
     </div>
   </div>
