--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,8 +1,9 @@
 <section id="blog"">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 mx-auto">
-
+    <div class="col-1">
+    </div>
+    <div class="col-8">
         <% if paginate && num_pages > 1 %>
         <p>Page <%= page_number %> of <%= num_pages %></p>
 
@@ -12,8 +13,13 @@
       <% end %>
 
       <% page_articles.each_with_index do |article, i| %>
-        <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+      <br>
+      <span><%= article.date.strftime('%b %e') %></span>
+      <hr>
+        <h2><%= link_to article.title, article %></h2>
+        <p class="summary-text">
         <%= article.summary(250) %>
+        </p>
       <% end %>
 
       <% if paginate %>
@@ -21,9 +27,10 @@
           <p><%= link_to 'Next page', next_page %></p>
         <% end %>
       <% end %>
-
-      </div>
     </div>
+    <div class="col-3">
+    </div>
+  </div>
   </div>
 </section>
 
