--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -96,14 +96,9 @@
 
   <!-- Main page container -->
   <%= yield %>
-
-<!-- Footer -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-bottom" id="footer">
-    <div class="container">
-  </nav>
-
+  
     <!-- Javascript -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <%= javascript_include_tag 'modernizr-3.5.0.min' %>
     <%= javascript_include_tag 'application' %>
     <%= yield_content :javascripts %>
