--- a/source/stylesheets/_blog.scss
+++ b/source/stylesheets/_blog.scss
@@ -1,23 +1,47 @@
 section#blog {
 
-  h1, h2, a {
-    color: black !important;
+  h1, h2, h3 {
+    color: $gray-700 !important;
     &:hover {
       color: $primary;
     }
   }
 
-  h3 {
-    font-size: 42px;
+  span {
+    font-size: 18px;
+    color: $primary;
   }
 
   p {
     font-size: 21px;
-    color: black;
-  }
+    }
+
+  .summary-text {
+    font-size: 18px;
+    }
 
   a {
-    font-weight: bold;
+    font-weight: normal;
   }
 
+  hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 2px;
+    border-color: $gray-100;
+  }
+
+  .blog-nav {
+    left: 5px;
+    bottom: 5px;
+  }
+
+}
+
+.badge {
+  color: white;
 }
