--- a/source/blog/_article_digest.html.erb
+++ b/source/blog/_article_digest.html.erb
@@ -1,12 +1,8 @@
-<div class="row">
-  <article class="col-sm-12 col-lg-9">
-    <h3><%= link_to article.title, article %></h3>
-    <%= article.summary %>
-
-    <% if article.summary.length < article.body.length %>
-      <p class="readmore"><%= link_to 'Read more &rarr;', article.url, :class => 'btn btn-secondary' %></p>
-    <% end %>
-  </article>
-
-  <%= partial '/blog/article_sidebar', locals: { article: article } %>
-</div>
+<br>
+<span><%= article.date.strftime('%b %e') %></span>
+<hr>
+<h2><%= link_to article.title, article %></h2>
+<p class="summary-text">
+<%= article.summary(100) %>
+</p>
+<%= partial '/blog/article_meta', locals: { article: article } %>
