larger text, icon placeholders

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -1,10 +1,10 @@
 // Global styling for this template
 
   body {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.15) ), url('../images/bg.svg');
+  background-image: linear-gradient( rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.05) ), url('../images/bg.svg');
   background-repeat: no-repeat;
   background-position: right top;
-  background-color: $gray-100;
+  background-color: white;
   background-size: cover;
   background-attachment: fixed;
 
