--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,11 +2,20 @@
 <section id="home">
 <div class="col-lg-10 mx-auto">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 mx-auto text-center">
-        <h2 align="left">State channels, Simplified.</h2>
-      </div>
+    <div class="row d-flex flex-wrap align-items-center">
+    <div class="col">
+    <h2 align="left">State channels, simplified.</h2>
     </div>
-  </div>
-  </div>
+    <div class="col text-center">
+    </div>
+    </div>
+    <div class="row d-flex flex-wrap align-items-center">
+    <div class="col">
+    <h2 align="left"></h2>
+    </div>
+    <div class="col text-center">
+    <i class="fas fa-cubes fa-10x"></i>
+    <i class="far fa-comments fa-10x"></i>
+    </div>
+    </div>
 </section>
