--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -1,13 +1,13 @@
-#home {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.25) ), url('../images/bg_dark.svg');
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-color: $gray-100;
-    background-size: cover;
-    background-attachment: fixed;
-}
-#home.h2 {
- font-size: 72px;
+// #home {
+//     background-image: linear-gradient( rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.25) ), url('../images/bg_dark.svg');
+//     background-repeat: no-repeat;
+//     background-position: right top;
+//     background-color: white;
+//     background-size: cover;
+//     background-attachment: fixed;
+// }
+section#home h2 {
+ font-size: 4rem;
 }
 
 #home.p {
