trying out third option for team page

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -58,7 +58,12 @@ h6 {
 }
 
 section {
-  padding: 8rem 0 0 0 ;
+  padding: 128px 0 128px 0 ;
+  height: 100%;
+}
+
+section#team {
+  padding-bottom: 0
 }
 
 .section-heading {
@@ -86,3 +91,17 @@ img::-moz-selection {
   color: $white;
   background: transparent;
 }
+
+.image-container {
+  position:relative;
+  height: 100%;
+  width: 100%;
+}
+img.center {
+  height: auto;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%,-100%);
+  top: 100%;
+  width: 80%;
+  }
