--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -52,6 +52,9 @@
               <a class="nav-link js-scroll-trigger" href="/team2">Team2</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/team3">Team3</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/research">Research</a>
             </li>
             <li class="nav-item">
