split team photo into individuals, fade them out unless hover

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -8,6 +8,7 @@
 @import "apps.scss";
 @import "blog.scss";
 @import "home.scss";
+@import "team.scss";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "github-highlighter";
