--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -97,11 +97,18 @@ img::-moz-selection {
   height: 100%;
   width: 100%;
 }
+
 img.center {
   height: auto;
   left: 50%;
   position: absolute;
   transform: translate(-50%,-100%);
   top: 100%;
-  width: 80%;
+  }
+
+img.bottom {
+  height: auto;
+  position: absolute;
+  transform: translate(0,-100%);
+  top: 100%;
   }
