--- a/source/team3.html.erb
+++ b/source/team3.html.erb
@@ -1,7 +1,44 @@
 <section id="team">
-<div class="image-container">
-  <img src="/images/cutout_team_photo_orange.png" width='80%' class="center">
+<div class="col-lg-10 mx-auto">
+    <div class="container d-flex flex-wrap align-items-center">
+      <div class=”row align-items-center”>
+        <div class=”col-6 align-text-center”>  
+            <h3 align="left" id="team-member-1-info">
+              <i class="fab fa-linkedin"></i> Glenn Wilkinson
+            </h3>
+            <h3 align="left" id="team-member-2-info">
+              <i class="fab fa-linkedin"></i> Alex Gap
+            </h3>
+            <h3 align="left" id="team-member-3-info">
+              <i class="fab fa-linkedin"></i> Mike Kerzhner
+            </h3>
+            <h3 align="left" id="team-member-4-info">
+               <i class="fab fa-linkedin"></i> Tom Close
+            </h3>
+            <h3 align="left" id="team-member-5-info">
+              <i class="fab fa-linkedin"></i> Andrew Stewart
+            </h3>            
+            <h3 align="left" id="team-member-6-info">
+              <i class="fab fa-linkedin"></i> George Knee
+            </h3>
+      </div>
+    </div>
   </div>
+</div>
+
+
+
+<div image-container>
+  <a href="https://www.linkedin.com/in/glenn-wilkinson-uk/"><img src="/images/glenn_only.png" class="bottom team-member" id="team-member-1" style="z-index:1;"></a>
+  <a href="https://www.linkedin.com/in/alex-gap-7ba83665/"><img src="/images/alex_only.png" class="bottom team-member" id="team-member-2" style="z-index:2;"></a>
+  <a href="https://www.linkedin.com/in/mike-kerzhner-40679336/"><img src="/images/mike_only.png" class="bottom team-member" id="team-member-3" style="z-index:3;"></a>
+  <a href="https://www.linkedin.com/in/tomclose/"><img src="/images/tom_only.png" class="bottom team-member" id="team-member-4" style="z-index:4;"></a>
+  <a href="https://www.linkedin.com/in/andrew-gord-stewart/"><img src="/images/andrew_only.png" class="bottom team-member" id="team-member-5" style="z-index:5;"></a>
+  <a href="https://www.linkedin.com/in/georgeknee/"><img src="/images/george_only.png" class="bottom team-member" id="team-member-6" style="z-index:6;"></a>
+</div>
 </section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+ <%= javascript_include_tag 'team-member-selector' %>
 
 
