Add dropdown for papers and apps

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -44,14 +44,23 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./force-move-games.pdf">Paper</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Papers
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="./force-move-games.pdf">Force Move Games</a>
+                <a class="dropdown-item" href="./nitro-protocol.pdf">Nitro Protocol</a>
+              </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://rps.magmo.com">RPS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://ttt.magmo.com">TTT</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Apps
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="https://rps.magmo.com">Rock Paper Scissors</a>
+                <a class="dropdown-item" href="https://ttt.magmo.com">Tic Tac Toe</a>
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
