--- a/app/styles/components/hero.scss
+++ b/app/styles/components/hero.scss
@@ -16,12 +16,34 @@
   font-weight: 300;
   margin-bottom: 0;
 }
+.hero__subheading__right {
+  @include f-subheading;
+  color: $c-darkgrey;
+  line-height: 1.45;
+  font-weight: 300;
+  margin-bottom: 0;
+  text-align: right;
+}
 
 .hero__body {
   @include f-base;
-  font-weight: 300;
+  margin:2rem;
+  font-weight: 400;
   line-height: 1.6;
   color: $c-darkgrey;
+
+  ul{
+    list-style: none;
+  }
+}
+
+.hero__body__list {
+  @include f-base;
+  margin:1rem;
+  font-weight: 400;
+  line-height: 1;
+  color: $c-darkgrey;
+  padding-left: 4rem;
 }
 
 .hero__cta {
